<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- TODO: adicionar ListView -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tipo de Seleção"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:id="@+id/btNenhuma"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/u1"
            android:id="@+id/btUnica1"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/u2"
            android:id="@+id/btUnica2"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/m1"
            android:id="@+id/btMultipla1"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/m2"
            android:id="@+id/btMultipla2"/>

    </LinearLayout>

</LinearLayout>
